RW-269 create container for overview

--- a/ui/src/app/cohort-review/overview-page/overview-page.html
+++ b/ui/src/app/cohort-review/overview-page/overview-page.html
@@ -1,10 +1,19 @@
-<app-review-nav></app-review-nav>
-
-<div>
-  <app-detail-all-events></app-detail-all-events>
-  <!--<app-combo-chart-->
-    <!--*ngIf="data?.size"-->
-    <!--[mode]="'stacked'"-->
-    <!--[data]="data">-->
-  <!--</app-combo-chart>-->
+<div class="participant-container">
+  <div class="participant-title">Participants</div>
+  <div class="total-heading">cohort Total: 9456 Participants</div>
 </div>
+<div class="overview-container">
+  <h1>Overview</h1>
+</div>
+
+<!--<app-review-nav></app-review-nav>-->
+
+<!--<div>-->
+
+  <!--&lt;!&ndash;<app-detail-all-events></app-detail-all-events>&ndash;&gt;-->
+  <!--&lt;!&ndash;<app-combo-chart&ndash;&gt;-->
+    <!--&lt;!&ndash;*ngIf="data?.size"&ndash;&gt;-->
+    <!--&lt;!&ndash;[mode]="'stacked'"&ndash;&gt;-->
+    <!--&lt;!&ndash;[data]="data">&ndash;&gt;-->
+  <!--&lt;!&ndash;</app-combo-chart>&ndash;&gt;-->
+<!--</div>-->
