--- a/ui/src/app/cohort-review/review-nav/review-nav.component.html
+++ b/ui/src/app/cohort-review/review-nav/review-nav.component.html
@@ -1,4 +1,5 @@
 <!-- Cohort Review header -->
+<app-overview-charts></app-overview-charts>
 <div class="review-header">
   <!--<a-->
     <!--class="header-link"-->
