--- a/ui/src/app/cohort-review/review-nav/review-nav.component.html
+++ b/ui/src/app/cohort-review/review-nav/review-nav.component.html
@@ -1,21 +1,21 @@
 <!-- Cohort Review header -->
 <app-overview-charts></app-overview-charts>
-<div class="review-header">
-  <!--<a-->
-    <!--class="header-link"-->
-    <!--title="Go to Cohort Overview"-->
-    <!--routerLink="../overview"-->
-    <!--routerLinkActive="active">-->
-    <!--Overview-->
-  <!--</a>-->
-<!--<app-detail-all-events></app-detail-all-events>-->
-  <!--<div class="vert-bar"></div>-->
+<!--<div class="review-header">-->
+  <!--&lt;!&ndash;<a&ndash;&gt;-->
+    <!--&lt;!&ndash;class="header-link"&ndash;&gt;-->
+    <!--&lt;!&ndash;title="Go to Cohort Overview"&ndash;&gt;-->
+    <!--&lt;!&ndash;routerLink="../overview"&ndash;&gt;-->
+    <!--&lt;!&ndash;routerLinkActive="active">&ndash;&gt;-->
+    <!--&lt;!&ndash;Overview&ndash;&gt;-->
+  <!--&lt;!&ndash;</a>&ndash;&gt;-->
+<!--&lt;!&ndash;<app-detail-all-events></app-detail-all-events>&ndash;&gt;-->
+  <!--&lt;!&ndash;<div class="vert-bar"></div>&ndash;&gt;-->
 
-  <a
-    class="header-link"
-    title="Go to Participant Browser"
-    routerLink="../participants"
-    routerLinkActive="active">
-    Participants
-  </a>
-</div>
+  <!--&lt;!&ndash;<a&ndash;&gt;-->
+    <!--&lt;!&ndash;class="header-link"&ndash;&gt;-->
+    <!--&lt;!&ndash;title="Go to Participant Browser"&ndash;&gt;-->
+    <!--&lt;!&ndash;routerLink="../participants"&ndash;&gt;-->
+    <!--&lt;!&ndash;routerLinkActive="active">&ndash;&gt;-->
+    <!--&lt;!&ndash;Participants&ndash;&gt;-->
+  <!--&lt;!&ndash;</a>&ndash;&gt;-->
+<!--</div>-->
