--- a/ui/src/app/cohort-review/overview-page/overview-page.html
+++ b/ui/src/app/cohort-review/overview-page/overview-page.html
@@ -8,6 +8,9 @@
     <span *ngIf="!openChartContainer" (click)="getCharts()"><clr-icon shape="play" size="15" style="transform: rotate(90deg);" class="is-solid play-icon"></clr-icon></span>
     <span *ngIf="openChartContainer" (click)="collapseContainer()"><clr-icon size="15" shape="play" style="transform: rotate(270deg);" class="is-solid play-icon"></clr-icon></span>
   </div>
+  <div class="chart-heading" *ngIf="showTitle">
+    Top 10 {{title}} of Participants in Cohort
+  </div>
   <div class="button-chart-container" *ngIf="openChartContainer">
     <div class="button-container">
       <div (click)="getDemoCharts()" >
@@ -17,37 +20,41 @@
           Demographics
         </button>
       </div>
-      <div (click)="getConditionCharts()">
+      <div *ngFor = "let name of typesList" (click)="getDifferentCharts(name)">
         <button type="button"
                 class="overview-buttons btn btn-primary">
-          CONDITIONS
-        </button>
-      </div>
-      <div>
-        <button type="button"
-                class="overview-buttons btn btn-primary">
-          PROCEDURES
-        </button>
-      </div>
-      <div>
-        <button type="button"
-                class="overview-buttons btn btn-primary">
-          MEDICATION
-        </button>
-      </div>
-      <div>
-        <button type="button"
-                class="overview-buttons btn btn-primary">
-          LABS
+        {{name}}
         </button>
       </div>
     </div>
+
+    <!--need to make another component start-->
     <div class="chart-container">
+      <div *ngIf="!data.size" class="loading-spinner spinner spinner-lg spin-in-overlay">
+        Loading...
+      </div>
       <app-combo-chart
               *ngIf="data?.size && demoGraph"
               [mode]="'stacked'"
               [data]="data">
       </app-combo-chart>
+      <div>
+        <div class="data-container" *ngIf="showTitle">
+          <div class=" data-heading">
+            Hypertensive heart disease
+          </div>
+          <div class="divider"></div>
+          <div class="data-bar-container">
+            <div class="light-grey">
+              <div class="data-blue" style="height:24px;width:25%"></div>
+            </div>
+          </div>
+          <div class="data-percent">
+              95% of Cohort
+          </div>
+        </div>
+      </div>
     </div>
+    <!--need to make another component end-->
   </div>
 </div>
