tentative first pass

--- a/ui/src/app/views/notebook-list/component.html
+++ b/ui/src/app/views/notebook-list/component.html
@@ -17,47 +17,8 @@
     <span *ngIf="!writePermission" class="tooltip-content">Write permission required to create notebooks</span>
   </div>
 
-  <div class="card item-card notebook-card" *ngFor="let notebook of notebookList">
-    <div class="header-area">
-      <clr-dropdown [clrCloseMenuOnItemClick]="false">
-        <button type="button" class="notebook-menu" [disabled]="actionsDisabled" clrDropdownTrigger>
-          <clr-icon shape="ellipsis-vertical" class="ellipsis-vertical" [class.disabled]="actionsDisabled"></clr-icon>
-        </button>
-        <clr-dropdown-menu *clrIfOpen>
-          <button class="action-item"
-                  id="rename-{{notebook.name.replace('.ipynb', '')}}"
-                  (click)="renameThis(notebook)"
-                  [class.disabled]="actionsDisabled"
-                  [disabled]="actionsDisabled">
-            <clr-icon shape="pencil"></clr-icon>
-            Rename
-          </button>
-          <button class="action-item"
-                  id="clone-{{notebook.name.replace('.ipynb', '')}}"
-                  (click)="cloneThis(notebook.name)"
-                  [class.disabled]="actionsDisabled"
-                  [disabled]="actionsDisabled">
-            <clr-icon shape="copy"></clr-icon>
-            Clone
-          </button>
-          <button class="action-item"
-                  id="delete-{{notebook.name.replace('.ipynb', '')}}"
-                  (click)="confirmDelete(notebook)"
-                  [class.disabled]="actionsDisabled"
-                  [disabled]="actionsDisabled">
-            <clr-icon shape="trash"></clr-icon>
-            Delete
-          </button>
-        </clr-dropdown-menu>
-      </clr-dropdown>
-      <div class="name" [class.disabled]="actionsDisabled" (click)="actionsDisabled || openNotebook(notebook)">{{notebook.name}}</div>
-    </div>
-    <div class="footer">
-      <div class="last-modified">
-        <div>Last Update<br/>{{notebook.lastModifiedTime | date}}</div>
-      </div>
-      <div class="item-type notebook"><div>NB</div></div>
-    </div>
+  <div *ngFor="let notebook of resourceList">
+    <app-resource-card [resourceCard]="notebook" [forList]="'for-list'" (onUpdate)="updateList($event)"></app-resource-card>
   </div>
 </div>
 
