--- a/ui/src/app/views/resource-card/component.html
+++ b/ui/src/app/views/resource-card/component.html
@@ -1,4 +1,4 @@
-<div class="card item-card {{resourceType}}-card">
+<div class="card item-card {{forList}} {{resourceType}}-card">
   <div class="header-area">
     <clr-dropdown>
       <button type="button" clrDropdownTrigger>
