--- a/ui/src/app/cohort-review/overview-page/overview-page.html
+++ b/ui/src/app/cohort-review/overview-page/overview-page.html
@@ -8,6 +8,7 @@
     <span *ngIf="!openChartContainer" (click)="getCharts()"><clr-icon shape="play" size="15" style="transform: rotate(90deg);" class="is-solid play-icon"></clr-icon></span>
     <span *ngIf="openChartContainer" (click)="collapseContainer()"><clr-icon size="15" shape="play" style="transform: rotate(270deg);" class="is-solid play-icon"></clr-icon></span>
   </div>
+  <!--<h1 (click)="fetchReviewChartsData()">Call Service</h1>-->
   <div class="chart-heading" *ngIf="showTitle">
     Top 10 {{title}} of Participants in Cohort
   </div>
