Fix z-index loading screen rendering problems

--- a/ui/src/app/views/routing-spinner/component.html
+++ b/ui/src/app/views/routing-spinner/component.html
@@ -1,5 +1,5 @@
 <div class="page-spinner-container">
-  <div #pageSpinner class="spinner spinner-inverse" [style.opacity]="0">
+  <div #pageSpinner class="spinner spinner-inverse">
     Loading...
   </div>
 </div>
