--- a/ui/src/app/views/routing-spinner/component.css
+++ b/ui/src/app/views/routing-spinner/component.css
@@ -1,12 +1,13 @@
 .page-spinner-container {
-  position: fixed;
+  display: none;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: black;
-  opacity: 0;
-  z-index: -1;
+  opacity: 0.8;
+  z-index: 1;
 }
 
 .page-spinner-container > .spinner {
