--- a/ui/src/app/views/signed-in/component.html
+++ b/ui/src/app/views/signed-in/component.html
@@ -72,6 +72,7 @@
       based on clicking routerLink elements (above) or router.navigate calls.
     -->
     <router-outlet></router-outlet>
+    <app-routing-spinner></app-routing-spinner>
   </div>
 </div>
 <app-bug-report></app-bug-report>
