[RW-1222][risk=low] Implement CDR version toggle on create/clone (#1210)

--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -14,11 +14,35 @@
       </ng-container>
       <div class="required-text">(Required)</div>
     </div>
-    <div class="name-area required-field" [class.validation-error]="nameNotEntered">
+    <div class="name-area required-field" [class.validation-error]="nameNotEntered"
+          style="display: inline-block; vertical-align: middle;">
       <input type="text" class="input name" name="workspace-name" autofocus
              [(ngModel)]="workspace.name" [disabled]="!hasPermission"
              placeholder="Workspace Name">
     </div>
+    <clr-dropdown style="display: inline-block; vertical-align: middle;">
+      <div class="tooltip">
+        <div class="tooltip-content-wrapper">
+          <button [disabled]="mode == Mode.Edit"
+                  class="btn btn-dropdown cdr-version-dropdown" type="button" clrDropdownTrigger>
+            {{selectedCdrName}}
+            <clr-icon shape="caret down"></clr-icon>
+          </button>
+          <div *ngIf="mode == Mode.Edit" class="tooltip-text">
+            To use a different dataset version, clone or create a new workspace.
+          </div>
+        </div>
+      </div>
+      <clr-dropdown-menu *clrIfOpen>
+        <ng-container *ngFor="let version of cdrVersions">
+          <button type="button" clrDropdownItem class="cdr-version-item"
+                  [class.active]="workspace.cdrVersionId === version.cdrVersionId"
+                  (click)="workspace.cdrVersionId = version.cdrVersionId">
+            {{version.name}}
+          </button>
+        </ng-container>
+      </clr-dropdown-menu>
+    </clr-dropdown>
   </div>
   <div>
 
