RW-1093 update alert styling and message

--- a/ui/src/app/cohort-search/tree/tree.component.css
+++ b/ui/src/app/cohort-search/tree/tree.component.css
@@ -31,3 +31,12 @@
 .search-width {
   width:100%;
 }
+
+.alert.alert-warning {
+  color: #E28327;
+  border: 0;
+}
+
+.alert.alert-warning .alert-icon {
+  color: #E28327;
+}
