--- a/ui/src/app/views/concept-homepage/component.html
+++ b/ui/src/app/views/concept-homepage/component.html
@@ -1,7 +1,7 @@
 <div class="search-box">
   <clr-tabs>
     <clr-tab>
-      <button clrTabLink>Concepts</button>
+      <button clrTabLink (click)="searching = false;">Concepts</button>
     </clr-tab>
     <clr-tab>
       <button clrTabLink>Concept Sets</button>
@@ -10,13 +10,13 @@
   <div style="display: flex; align-items: center; margin-top: 1.5%;">
     <clr-icon shape="search" style="position: absolute; height: 1rem; width: 1rem; fill: #216FB4; left: 5.3%;"></clr-icon>
     <input type="text" id="concept-search-input" [(ngModel)]="searchTerm" placeholder="Search concepts in domains">
-    <button class="btn btn-secondary">Search</button>
-    <clr-checkbox [clrChecked]="standardConceptsOnly">
+    <button class="btn btn-secondary" (click)="searching = true">Search</button>
+    <clr-checkbox class="standard-concepts-checkbox" [clrChecked]="standardConceptsOnly">
       Standard concepts only
     </clr-checkbox>
   </div>
 </div>
-<div class="domain-box">
+<div class="domain-box lower-box" *ngIf="!searching else chartBox">
   <div class="card item-card" *ngFor="let domain of conceptDomainList">
     <div class="concept-name">{{domain.name}}</div>
     <div class="concept-text">
@@ -33,3 +33,42 @@
     <div class="footer"><button class="btn btn-link browse-btn">Browse Domain</button></div>
   </div>
 </div>
+<ng-template #chartBox>
+  <div class="chart-box lower-box">
+    <clr-tabs class="chart-selector-tabs">
+      <clr-tab *ngFor="let domain of conceptDomainList">
+        <button clrTabLink (click)="selectDomain(domain.name)">
+          <div class="chart-selector-header">{{domain.name}}</div>
+          <div>{{domain.conceptCount}}</div>
+        </button>
+      </clr-tab>
+    </clr-tabs>
+    <div class="filter-options">
+      Filter by vocabulary:
+      <clr-checkbox class="filter-checkbox" [clrChecked]="standardConceptsOnly">
+        SNOMED (4011)
+      </clr-checkbox>
+      <clr-checkbox class="filter-checkbox" [clrChecked]="standardConceptsOnly">
+        CPT (2951)
+      </clr-checkbox>
+      <clr-checkbox class="filter-checkbox" [clrChecked]="standardConceptsOnly">
+        ICD10 (2112)
+      </clr-checkbox>
+    </div>
+    <clr-datagrid>
+      <clr-dg-column>Name</clr-dg-column>
+      <clr-dg-column>Synonyms</clr-dg-column>
+      <clr-dg-column>Code</clr-dg-column>
+      <clr-dg-column>Vocabulary</clr-dg-column>
+      <clr-dg-column>Count</clr-dg-column>
+      <div class="break"></div>
+      <clr-dg-row *ngFor="let concept of concepts">
+        <clr-dg-cell>{{concept.name}}</clr-dg-cell>
+        <clr-dg-cell>{{concept.synonyms.join(', ')}}</clr-dg-cell>
+        <clr-dg-cell>{{concept.code}}</clr-dg-cell>
+        <clr-dg-cell>{{concept.vocabulary}}</clr-dg-cell>
+        <clr-dg-cell>{{concept.count}}</clr-dg-cell>
+      </clr-dg-row>
+    </clr-datagrid>
+  </div>
+</ng-template>
